// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderMatches > 1 match with layout elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      Layout
    </div>
  </div>
</div>
`;

exports[`renderMatches > 1 match with no elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  />
</div>
`;

exports[`renderMatches > no matches 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    / is not found
  </div>
</div>
`;
